Created controllers to deal with applet iframe. Applet working, but tempremental.

--- a/app/assets/stylesheets/home.css.erb
+++ b/app/assets/stylesheets/home.css.erb
@@ -157,10 +157,14 @@ a {
 }
 
 #terminal {
-        background-color: white;
-        border-top: solid 1px #E5E5EE;
-        padding: 30px;
-        height:100px;
+  background-color: white;
+  border-top: solid 1px #E5E5EE;
+  padding: 5px;
 	margin-left:200px;
 }
 
+#terminal iframe {
+  border-style: none;
+  width: 100%;
+  height: 300px;
+}
