--- a/app/views/layouts/output.html.erb
+++ b/app/views/layouts/output.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JavaFiddle</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "output.css", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
