--- a/app/assets/stylesheets/home.css.erb
+++ b/app/assets/stylesheets/home.css.erb
@@ -10,6 +10,13 @@ a {
 	display: block;
 }
 
+.logo {
+  width:80%;
+}
+
+#bottom-pane {
+  height: 40%;
+}
 #container {
         height:100%;
 }
@@ -48,69 +55,66 @@ a {
         height:100%;
 }
 
-/*#content #sidebar a {
-        color: #5AA4D7;
-        text-decoration:none;
-}*/
+#content #sidebar ul {
+  margin-top:30px;
+  list-style:none;
+  margin-left:0px;
+  padding:0px;
+}
 
-	#content #sidebar ul {
-		margin-top:30px;
-		list-style:none;
-		margin-left:0px;
-		padding:0px;
-	}
+#content #sidebar ul li {
+	border-top: solid 1px #E5E5EE;
+	padding-left:15px;
+}
 
-	#content #sidebar ul li {
-		border-top: solid 1px #E5E5EE;
-		padding-left:15px;
-	}
-	#content #sidebar ul li.nav-content {
-		border-top: none;
-		font-size: smaller;
-	}
-	#content #sidebar ul li.nav-content a {
-		text-decoration: underline;
-		color: #5AA4D7;
-		display: inline;
-	}
+#content #sidebar ul li.nav-content {
+	border-top: none;
+	font-size: smaller;
+}
 
-	#content #sidebar ul li.last {
-		border-bottom: solid 1px #E5E5EE;
-	}
+#content #sidebar ul li.nav-content a {
+	text-decoration: underline;
+	color: #5AA4D7;
+	display: inline;
+}
 
-	#content #sidebar ul li.active {
-		color: #333;
-		/*box-shadow: inset 0 2px 1px #F3F3F3;*/
-		background-position: 10px -318px;
-	}
+#content #sidebar ul li.last {
+	border-bottom: solid 1px #E5E5EE;
+}
 
-	#content #sidebar h1 {
-		text-align:center;
-		font-size:x-large;
-		font-weight: bold;
-	}
+#content #sidebar ul li.active {
+	color: #333;
+	background-position: 10px -318px;
+}
 
-	#content #sidebar p#empowered {
-		text-align: center;
-		width: 100%;
-		position: absolute;
-		bottom: 0;
-	}
-	.jsjvm {
-		font-family: Courier;
-	}
+#content #sidebar h1 {
+	text-align:center;
+	font-size:x-large;
+	font-weight: bold;
+}
 
-	#status {
-		border-top: 1px solid #E5E5EE;
-		height: 36px;
-		background-color:#F5F5FF;
-		margin-left:200px;
-		cursor: n-resize;
-	}
+#content #sidebar p#empowered {
+	text-align: center;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+}
 
-	#status #working {
-		background: url(<%= image_tag "ajax-loader.gif" %>) no-repeat left;
-	width: 60px;
+.jsjvm {
+	font-family: Courier;
+}
+
+#status {
+	border-top: 1px solid #E5E5EE;
+	height: 36px;
+	background-color:#F5F5FF;
+	margin-left:200px;
+	cursor: n-resize;
+}
+
+#status #working {
+	background: url(<%= image_tag "ajax-loader.gif" %>) no-repeat left;
+  width: 60px;
 	height: 36px;
 	margin: 0;
 	padding-left:20px;
@@ -120,11 +124,11 @@ a {
 
 .nav-btn {
 	height: 36px;
-        line-height: 36px;
-        padding: 0 8px;
-        font-weight: normal;
+  line-height: 36px;
+  padding: 0 8px;
+  font-weight: normal;
 	cursor:pointer;
-        text-decoration: none;
+  text-decoration: none;
 	color:black;
 }
 
@@ -166,5 +170,5 @@ a {
 #terminal iframe {
   border-style: none;
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
