Alpha release up and running. Switched to static assets. Fixed minor css issues

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,13 +19,13 @@
             </li>
 
             <li class="nav-btn">
-              <a href="https://github.com/Jivings/jsJVM/issues">Report a Bug</a>
+              <a href="https://github.com/Jivings/Java-Fiddle/issues">Report a Bug</a>
             </li>
 					  <li class="nav-btn accordion last">About</li>
 					  <li class="nav-content hidden last">
               <p>JavaFiddle was intended as an example use of <span class="jsjvm">&lt;jsJVM&gt;</span>, 
               a cloud based Java platform.</p>
-              <p>The concept, inspired by <a href="http://jsfiddle.net">jsfiddle</a> 
+              <p>The concept, inspired by <a href="http://jsfiddle.net">jsfiddle.net</a> 
               has since evolved to encompass other Java Virtual Machines.</p>
               <p>Created and maintained by <br /><a href="http://www.ivings.org.uk">James Ivings</a>.</p>
               <h3>Licence</h3>
@@ -51,11 +51,11 @@
 				<p id="working"></p>
 				<ul>
 					<li class="nav-btn" id="clear-code-btn">Clear code</li>
-					<li class="nav-btn" id="clear-output-btn">Clear output</li>
+					<!--<li class="nav-btn" id="clear-output-btn">Clear output</li>-->
 				</ul>
 			</div>
       <div id="terminal">
-        <iframe src="http://localhost:3000/code/<%= @classpath %>"></iframe>
+        <iframe src="http://javafiddle.net/code/<%= @classpath %>"></iframe>
 			</div>
     </div>
  </div>
