--- a/app/views/output/index.html.erb
+++ b/app/views/output/index.html.erb
@@ -4,6 +4,6 @@
   width="100%"
   height="100%">
     <param name="classname" value="<%= @classname %>">
-    <param name="path" value="http://localhost:3000/saved/<%=@uuid %>/">
+    <param name="path" value="http://javafiddle.net/saved/<%=@uuid %>/">
     <param name="arguments" value="<%= @args %>">
 </applet>
