Compilations errors printing successfully

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
 				</ul>
 			</div>
       <div id="terminal">
-        
+        <pre id="compile-error"></pre>  
         <iframe src="http://javafiddle.net/code/<%= @classpath %>"></iframe>
 			</div>
     </div>
