--- a/app/assets/stylesheets/codemirror.css
+++ b/app/assets/stylesheets/codemirror.css
@@ -5,8 +5,8 @@
 
 .CodeMirror-scroll {
   overflow: auto;
-  height: 300px;
-  /* This is needed to prevent an IE[67] bug where the scrolled content
+  /*height: 300px;
+   This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
   position: relative;
 }
