Added better SEO

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JavaFiddle</title>
+  <title>JavaFiddle - Online Java Editor</title>
   <%= stylesheet_link_tag    "home", :media => "all" %>
   <%= stylesheet_link_tag    "codemirror", :media => "all" %>
   <%= stylesheet_link_tag    "scaffolds", :media => "all" %>
@@ -11,7 +11,7 @@
   <%= javascript_include_tag "jquery-ui.min.js" %>
   <%= javascript_include_tag "codemirror" %>
   <%= javascript_include_tag "clike" %>
-
+  <meta name="description" content="JavaFiddle is a Java code snippet creation and sharing tool." >
   <%= csrf_meta_tags %>
   <script type="text/javascript">
 
