Changed name of models/Project to ProjectModel. Added debug route to seed database. Controller will load default project from database.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(code: String)
+@(project: ProjectModel)
 
 @main("Welcome to Play 2.0") {
     
@@ -37,7 +37,7 @@
     </div>
     <div id="editpane">
 						<textarea id="code" rows=10 cols=10 >
-					 	 @code
+					 	 @project.code
      	</textarea>
     </div>
   </div>
