--- a/public/stylesheets/scaffolds.css
+++ b/public/stylesheets/scaffolds.css
@@ -61,6 +61,14 @@ input, select {
   color: #555;
   width: 80%; }
 
+input[type="button"], input[type="submit"] {
+  width: 100%;
+  height: 100%;
+  border-style: none;
+  color: black;
+  background-color: transparent;
+  cursor: pointer;
+}
 input[type="text"], select {
   background-color: white;
   border: 1px solid #CCC;
