--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,9 @@
         <script src="@routes.Assets.at("javascripts/jquery-ui.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/codemirror.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/clike.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/search.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/searchcursor.js")" type="text/javascript"></script>
+
 
     </head>
     <body>
